--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "bin": {
     "oc-registry-test": "./cli.js"
   },
+  "scripts": {
+    "test": "eslint ."
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/opentable/oc-registry-test.git"
+    "url": "git+https://github.com/opencomponents/oc-registry-test.git"
   },
   "keywords": [
     "OC",
@@ -19,12 +22,16 @@
   "author": "Matteo Figus",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/opentable/oc-registry-test/issues"
+    "url": "https://github.com/opencomponents/oc-registry-test/issues"
   },
-  "homepage": "https://github.com/opentable/oc-registry-test#readme",
+  "homepage": "https://github.com/opencomponents/oc-registry-test#readme",
   "dependencies": {
     "chai": "^3.5.0",
     "minimal-request": "^2.1.1",
     "mocha": "^3.1.2"
+  },
+  "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-config-defaults": "^9.0.0"
   }
 }
