--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "chai": "^3.5.0",
     "minimal-request": "^2.1.1",
+    "minimist": "^1.2.0",
     "mocha": "^3.1.2"
   },
   "devDependencies": {
